Reduce parallelism used while building grpc to unbreak CI
The latest version of grpc seems to need even more memory to build,
so 8 processes is too much. 6 seems to work, for now...

(See
<https://app.circleci.com/pipelines/github/DataDog/dd-trace-rb/6206/workflows/42288cf1-db63-48a2-8541-28d884b5de8e/jobs/229632>
for a failing gem installation due to this).

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,10 @@ test_containers:
   - &container_base_environment
     BUNDLE_GEMFILE: /app/Gemfile
     JRUBY_OPTS: --dev # Faster JVM startup: https://github.com/jruby/jruby/wiki/Improving-startup-time#use-the---dev-flag
-    GRPC_RUBY_BUILD_PROCS: 8 # Override number of concurrent compiles in grpc gem, see https://github.com/grpc/grpc/pull/28250 and https://github.com/DataDog/dd-trace-rb/issues/1791
+    # Override number of concurrent compiles in grpc gem, see https://github.com/grpc/grpc/pull/28250 and https://github.com/DataDog/dd-trace-rb/issues/1791
+    # If you see gem installation failing with "Killed" on CircleCI and `gem install --platform ruby grpc` reproduces the
+    # issue when you connect to the testing container via ssh, then try lowering this file a notch.
+    GRPC_RUBY_BUILD_PROCS: 6
   - &container_parameters_environment
     - *container_base_environment
     - TEST_DATADOG_INTEGRATION: 1
