--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -569,47 +569,47 @@ workflows:
       # Integration
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.1
-          integration_apps: 'rack'
+          integration_apps: 'rack ruby-pg'
           ruby_version: '2.1'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.2
-          integration_apps: 'rack'
+          integration_apps: 'rack ruby-pg'
           ruby_version: '2.2'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.3
-          integration_apps: 'rack rails-five'
+          integration_apps: 'rack rails-five ruby-pg'
           ruby_version: '2.3'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.4
-          integration_apps: 'rack rails-five'
+          integration_apps: 'rack rails-five ruby-pg'
           ruby_version: '2.4'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.5
-          integration_apps: 'rack rails-five rails-six'
+          integration_apps: 'rack rails-five rails-six ruby-pg'
           ruby_version: '2.5'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.6
-          integration_apps: 'rack rails-five rails-six'
+          integration_apps: 'rack rails-five rails-six ruby-pg'
           ruby_version: '2.6'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.7
-          integration_apps: 'rack rails-five rails-six rails-seven'
+          integration_apps: 'rack rails-five rails-six rails-seven ruby-pg'
           ruby_version: '2.7'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-3.0
-          integration_apps: 'rack rails-six rails-seven'
+          integration_apps: 'rack rails-six rails-seven ruby-pg'
           ruby_version: '3.0'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-3.1
-          integration_apps: 'rack rails-six rails-seven'
+          integration_apps: 'rack rails-six rails-seven ruby-pg'
           ruby_version: '3.1'
           <<: *filters_all_branches_and_tags
       # TODO: Re-enable once 3.2 testing is green!
