--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -569,17 +569,17 @@ workflows:
       # Integration
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.1
-          integration_apps: 'rack ruby-pg'
+          integration_apps: 'rack'
           ruby_version: '2.1'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.2
-          integration_apps: 'rack ruby-pg'
+          integration_apps: 'rack'
           ruby_version: '2.2'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.3
-          integration_apps: 'rack rails-five ruby-pg'
+          integration_apps: 'rack rails-five'
           ruby_version: '2.3'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
