--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ DD_AGENT_HOST=localhost
 DD_API_KEY=00000000000000000000000000000000
 DD_METRIC_AGENT_PORT=8125
 DD_TRACE_AGENT_PORT=8126
+DD_INSTRUMENTATION_TELEMETRY_ENABLED=false
 TEST_DDAGENT_VAR_RUN=/var/run/datadog
 TEST_DDAGENT_UNIX_SOCKET=${TEST_DDAGENT_VAR_RUN}/apm.socket
 TEST_DDAGENT_API_KEY=invalid_key_but_this_is_fine
