Set DD_INSTRUMENTATION_TELEMETRY_ENABLED false in ci

--- a/.github/workflows/test-macos.yaml
+++ b/.github/workflows/test-macos.yaml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       SKIP_SIMPLECOV: 1
+      DD_INSTRUMENTATION_TELEMETRY_ENABLED: false
     steps:
       - uses: actions/checkout@v2
       # bundler appears to match both prerelease and release rubies when we
