--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -124,8 +124,9 @@ Lint/EmptyClass: # (new in 1.3)
   Enabled: true
 Lint/LambdaWithoutLiteralBlock: # (new in 1.8)
   Enabled: true
+# Prevents `return` in an assignment block `var = begin; return; end` block.
 Lint/NoReturnInBeginEndBlocks: # (new in 1.2)
-  Enabled: true
+  Enabled: false
 Lint/NumberedParameterAssignment: # (new in 1.9)
   Enabled: true
 Lint/OrAssignmentToConstant: # (new in 1.9)
