Implement module to emit Telemetry events (#2127)
* Add module to emit telemetry event

* Handle seq_id autoincrement in emitter

* Fix emitter tests

* Add configuration tests

* Disable telemetry in CircleCI jobs

* Add test to integration apps

* fixup! Add test to integration apps

* Move app started call to components

* Add tests for emitter

* Add tests for client

* Add tests for components

* Modify integration tests

* fixup! Modify integration tests

* Use accessor for telemetry in integration tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ test_containers:
     # If you see gem installation failing with "Killed" on CircleCI and `gem install --platform ruby grpc` reproduces the
     # issue when you connect to the testing container via ssh, then try lowering this file a notch.
     GRPC_RUBY_BUILD_PROCS: 6
+    DD_INSTRUMENTATION_TELEMETRY_ENABLED: false
   - &container_parameters_environment
     - *container_base_environment
     - TEST_DATADOG_INTEGRATION: 1
