--- a/integration/apps/sinatra/docker-compose.yml
+++ b/integration/apps/sinatra/docker-compose.yml
@@ -17,8 +17,7 @@ services:
       - DD_PROFILING_ENABLED=true
       # Use these to choose what is run
       - DD_DEMO_ENV_PROCESS=puma
-      # - DD_DEMO_ENV_FEATURES=tracing,profiling
-      - DD_DEMO_ENV_FEATURES=tracing
+      - DD_DEMO_ENV_FEATURES=tracing,profiling
       # Use this for a local version of ddtrace
       - DD_DEMO_ENV_GEM_LOCAL_DDTRACE=/vendor/dd-trace-rb
       # Use these for a specific revision of ddtrace
