--- a/integration/apps/rails-seven/docker-compose.yml
+++ b/integration/apps/rails-seven/docker-compose.yml
@@ -1,5 +1,15 @@
 version: '3.4'
 services:
+  nginx:
+    image: nginx:stable
+    depends_on:
+      - app
+    expose:
+      - "80"
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
   app:
     build:
       context: .
@@ -94,13 +104,13 @@ services:
     build:
       context: ../../images
       dockerfile: wrk/Dockerfile
-    command: -t10 -c10 -d43200s -s /scripts/scenarios/basic/default.lua http://app/basic/default
+    command: -t10 -c10 -d43200s -s /scripts/scenarios/basic/default.lua http://nginx/basic/default
     depends_on:
       - app
     environment:
-      - HEALTH_CHECK_URL=http://app/health
+      - HEALTH_CHECK_URL=http://nginx/health
       - HEALTH_CHECK_INTERVAL=1
-      - HEALTH_CHECK_MAX_ATTEMPTS=60
+      - HEALTH_CHECK_MAX_ATTEMPTS=120
     volumes:
       - ./data/wrk:/data
       - ../../images/wrk/scripts:/scripts
