--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -542,7 +542,6 @@ services:
       - "ddagent_var_run:${TEST_DDAGENT_VAR_RUN}"
   ddagent:
     image: datadog/agent
-    platform: linux/x86_64
     environment:
       - DD_APM_ENABLED=true
       - DD_BIND_HOST=0.0.0.0
@@ -558,7 +557,6 @@ services:
       - ddagent_var_run:/var/run/datadog
   elasticsearch:
     image: elasticsearch:8.1.3
-    platform: linux/x86_64
     expose:
       - "9200"
       - "9300"
@@ -569,17 +567,15 @@ services:
       # Ensure production cluster requirements are not enforced
       - discovery.type=single-node
       - xpack.security.enabled=false
-      - ES_JAVA_OPTS="-Xms750m -Xmx750m"
+      - ES_JAVA_OPTS=-Xmx750m
   memcached:
     image: memcached:1.5-alpine
-    platform: linux/x86_64
     expose:
       - "11211"
     ports:
       - "${TEST_MEMCACHED_PORT}:11211"
   mongodb:
-    image: mongo:3.5
-    platform: linux/x86_64
+    image: mongo:3.6
     expose:
       - "27017"
     ports:
@@ -598,7 +594,6 @@ services:
       - "${TEST_MYSQL_PORT}:3306"
   postgres:
     image: postgres:9.6
-    platform: linux/x86_64
     environment:
       - POSTGRES_PASSWORD=$TEST_POSTGRES_PASSWORD
       - POSTGRES_USER=$TEST_POSTGRES_USER
@@ -616,8 +611,7 @@ services:
     ports:
       - "${TEST_PRESTO_PORT}:8080"
   redis:
-    image: redis:3.0
-    platform: linux/x86_64
+    image: redis:3.2
     expose:
       - "6379"
     ports:
