--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -611,22 +611,22 @@ workflows:
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.6
-          integration_apps: 'rack rails-five rails-six sinatra2-classic sinatra2-modular'
+          integration_apps: 'rack rails-five rails-six sinatra2_classic sinatra2_modular'
           ruby_version: '2.6'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-2.7
-          integration_apps: 'rack rails-five rails-six rails-seven sinatra2-classic sinatra2-modular'
+          integration_apps: 'rack rails-five rails-six rails-seven sinatra2_classic sinatra2_modular'
           ruby_version: '2.7'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-3.0
-          integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
+          integration_apps: 'rack rails-six rails-seven sinatra2_classic sinatra2_modular'
           ruby_version: '3.0'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-3.1
-          integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
+          integration_apps: 'rack rails-six rails-seven sinatra2_classic sinatra2_modular'
           ruby_version: '3.1'
           <<: *filters_all_branches_and_tags
       # TODO: Re-enable once 3.2 testing is green!
