--- a/integration/apps/sinatra2_classic/docker-compose.ci.yml
+++ b/integration/apps/sinatra2_classic/docker-compose.ci.yml
@@ -5,7 +5,7 @@ services:
     # and use it as the `ddtrace` gem.
     build:
       context: ../../..
-      dockerfile: integration/apps/sinatra/Dockerfile-ci
+      dockerfile: integration/apps/sinatra2_classic/Dockerfile-ci
       args:
         BASE_IMAGE: ${APP_IMAGE}
     depends_on:
@@ -16,11 +16,11 @@ services:
       - DD_METRIC_AGENT_PORT=8125
       - DD_TRACE_AGENT_PORT=8126
       - DD_HEALTH_METRICS_ENABLED=true
-      - DD_SERVICE=acme-sinatra
+      - DD_SERVICE=acme-sinatra2-classic
       - DD_PROFILING_ENABLED=true
       # Use these to choose what is run
       - DD_DEMO_ENV_PROCESS # needs to be specified, see README for available options
-      - DD_DEMO_ENV_FEATURES=tracing
+      - DD_DEMO_ENV_FEATURES=tracing,profiling
     expose:
       - "80"
     stdin_open: true
@@ -43,7 +43,7 @@ services:
   integration-tester:
     build:
       context: ../../..
-      dockerfile: integration/apps/sinatra/Dockerfile-ci
+      dockerfile: integration/apps/sinatra2_classic/Dockerfile-ci
       args:
         BASE_IMAGE: ${APP_IMAGE}
     command: bin/test
