--- a/integration/apps/rails-six/docker-compose.yml
+++ b/integration/apps/rails-six/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       - logs:/app/log
 
   resque-worker:
+    command: 'bin/run'
     build:
       context: .
       args:
@@ -137,7 +138,7 @@ services:
       - "6379"
   load-tester:
     image: datadog/dd-apm-demo:wrk
-    command: -t10 -c10 -d43200s -s /scripts/scenarios/basic/default.lua http://app/basic/default
+    command: -t10 -c10 -d43200s -s /scripts/scenarios/jobs.lua http://app/jobs
     depends_on:
       - app
     environment:
