--- a/integration/apps/rails-seven/Gemfile
+++ b/integration/apps/rails-seven/Gemfile
@@ -1,5 +1,7 @@
 require 'datadog/demo_env'
 
+source "https://rubygems.org"
+
 source "https://rubygems.org" do
   git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
