--- a/integration/apps/hanami/Gemfile
+++ b/integration/apps/hanami/Gemfile
@@ -7,7 +7,11 @@ gem 'dry-container', '~> 0.8.0'
 
 gem 'sqlite3'
 gem 'puma'
+gem 'unicorn'
+gem 'webrick'
+
 gem 'ddtrace'
+gem 'google-protobuf', '~> 3.0'
 
 group :development do
   # Code reloading
