--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -622,12 +622,12 @@ workflows:
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-3.0
-          integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
+          integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular configuration-cli'
           ruby_version: '3.0'
           <<: *filters_all_branches_and_tags
       - orb/build_and_test_integration:
           name: build_and_test_integration-3.1
-          integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
+          integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular configuration-cli'
           ruby_version: '3.1'
           <<: *filters_all_branches_and_tags
       # TODO: Re-enable once 3.2 testing is green!
