--- a/integration/apps/hanami/docker-compose.yml
+++ b/integration/apps/hanami/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       # - DD_DEMO_ENV_GEM_REF_DDTRACE=f233336994315bfa04dac581387a8152bab8b85a
       # Enable building the profiling native extension
       - DD_DEMO_ENV_BUILD_PROFILING_EXTENSION=true
+      # - DD_TRACE_DEBUG=true
     expose:
       - "80"
     ports:
@@ -67,7 +68,7 @@ services:
       #   target: /host/sys/fs/cgroup:ro
   load-tester:
     image: datadog/dd-apm-demo:wrk
-    command: -t10 -c10 -d43200s -s /scripts/scenarios/basic/default.lua http://app/basic/default
+    command: -t10 -c10 -d43200s -s /scripts/scenarios/basic/default.lua http://app/books
     depends_on:
       - app
     environment:
