--- a/integration/apps/rails-six/Gemfile
+++ b/integration/apps/rails-six/Gemfile
@@ -63,7 +63,7 @@ gem 'ipaddress'
 gem 'rabl', platform: :ruby
 gem 'rack-cors'
 gem 'rake'
-gem 'redis'
+gem 'redis', '~> 4.8'
 gem 'resque'
 # gem 'resque-pool' # Incompatible with Redis 4.0+
 gem 'resque-scheduler'
