Added: Reflexive test for distributed tracing in the rails-six app

--- a/integration/apps/rails-six/Gemfile
+++ b/integration/apps/rails-six/Gemfile
@@ -56,6 +56,7 @@ gem 'bcrypt-ruby', platform: :ruby
 gem 'connection_pool'
 gem 'devise'
 gem 'faker', require: false # Make up fake data to put in models for load testing
+gem 'faraday'
 gem 'geoip'
 gem 'hawk-auth'
 gem 'httparty'
