--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -630,12 +630,11 @@ workflows:
           integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
           ruby_version: '3.1'
           <<: *filters_all_branches_and_tags
-      # TODO: Re-enable once 3.2 testing is green!
-      # - orb/build_and_test_integration:
-      #     name: build_and_test_integration-3.2
-      #     integration_apps: 'rack rails-six rails-seven'
-      #     ruby_version: '3.2'
-      #     <<: *filters_all_branches_and_tags
+      - orb/build_and_test_integration:
+          name: build_and_test_integration-3.2
+          integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
+          ruby_version: '3.2'
+          <<: *filters_all_branches_and_tags
       # ADD NEW RUBIES HERE
       # MRI
       - orb/build:
@@ -860,12 +859,11 @@ workflows:
           integration_apps: 'rack rails-six rails-seven'
           ruby_version: '3.1'
           <<: *filters_all_branches_and_tags
-      # TODO: Re-enable once 3.2 testing is green!
-      # - orb/build_and_test_integration:
-      #     name: build_and_test_integration-3.2
-      #     integration_apps: 'rack rails-six rails-seven'
-      #     ruby_version: '3.2'
-      #     <<: *filters_all_branches_and_tags
+      - orb/build_and_test_integration:
+          name: build_and_test_integration-3.2
+          integration_apps: 'rack rails-six rails-seven'
+          ruby_version: '3.2'
+          <<: *filters_all_branches_and_tags
       # ADD NEW RUBIES HERE
       # MRI
       - orb/build:
