--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -70,8 +70,7 @@ Metrics/BlockLength:
     - spec/**/*
 
 Metrics/ModuleLength:
-  Exclude:
-    - spec/**/*
+  Enabled: false
 
 Metrics/ParameterLists:
   Enabled: false
