Avoid using pry-byebug on legacy rubies
We already have something similar on the `Gemfile` for the gem but did not copy it
to the integration apps.

Bundler on Ruby 2.2 gets confused sometimes and tries to install a
more modern `byebug`/`pry-byebug` than it should:
<https://app.circleci.com/pipelines/github/DataDog/dd-trace-rb/7563/workflows/84415e5e-c561-4312-8e18-ff4d59394471/jobs/280478>

--- a/integration/apps/rack/Gemfile
+++ b/integration/apps/rack/Gemfile
@@ -42,7 +42,8 @@ else
 end
 
 # Development
-gem 'pry-byebug'
+gem 'pry-byebug' if RUBY_VERSION >= '2.3.0' && RUBY_ENGINE != 'truffleruby' && RUBY_VERSION < '3.2.0'
+gem 'pry-nav' if RUBY_VERSION < '2.3.0'
 # gem 'pry-stack_explorer', platform: :ruby
 # gem 'rbtrace'
 # gem 'ruby-prof'
