--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ test_containers:
     # issue when you connect to the testing container via ssh, then try lowering this file a notch.
     GRPC_RUBY_BUILD_PROCS: 6
     DD_INSTRUMENTATION_TELEMETRY_ENABLED: false
+    TEST_REDIS_OLD_HOST: redis_old
   - &container_parameters_environment
     - *container_base_environment
     - TEST_DATADOG_INTEGRATION: 1
@@ -78,6 +79,10 @@ test_containers:
   - &container_redis
     image: redis:6.2
   - &redis_port 6379
+  - &container_redis_old
+    image: redis:3.0
+    name: redis_old
+  - &redis_old_port 6379
   - &container_mongo
     image: mongo:3.5
   - &mongo_port 27017
@@ -261,6 +266,7 @@ orbs:
           - *container_mysql
           - *container_elasticsearch
           - *container_redis
+          - *container_redis_old
           - *container_mongo
           - *container_memcached
           - *container_agent
@@ -288,6 +294,8 @@ orbs:
               port: *elasticsearch_port
           - docker-wait:
               port: *redis_port
+          - docker-wait:
+              port: *redis_old_port
           - docker-wait:
               port: *mongo_port
           - docker-wait:
