Expand aarch64 support to all CI images
Working from `arm64-darwin` machines becomes an increasingly common
thing, and presumably we want to be able to run all Ruby versions on
that.

Our `docker-compose` relies on images that aren't currently built for
`aarch64-linux`, this commit changes that.

Special cases:

* Removed `protoc` from all `Dockerfile`s since it appears to be unused now
* `ruby:2.1` has no aarch64 image published, Rebuilt it from a Debian
  Stretch base
* `ruby:2.2` has an aarch64 image published but is Debian Jessie based,
  and Jessie had aarch64 upon release but as an "extra" arch, which is
  not part of LTS, so packages vanished when Debian moved the repos to
  `archive`, so any `apt-get` irrevocably fails. Rebuilt from a Debian
  Stretch base
* JRuby 9.2 has no aarch64 image published, was based on
  `openjdk:8-jre`, I rebuilt both from the last `openjdk:8-jre` which
  now has aarch64 images, these being based on bullseye (there are also
  Buster-based images upstream if it turns out it matters)
* TruffleRuby 21 has no aarch64 image published, and it wasn't an
  official one anyway. Added TruffleRuby 22 from the official
  Oracle registry, and removed TruffleRuby 21

The last bit of adjustment is Stretch-based ones (so 2.1, 2.2, 2.3, 2.4)
which do build until they fail to run the first aarch64 release of
`docker-compose` due to an outdated glibc version. This has been worked
around by installing it from `stretch-backports`, which has a 1.21 version close to
1.29 we presumably want.

2.4 had a note about staying on Stretch instead of Buster because
of `sequel`, which may not be relevant anymore. It was initially moved
to Buster to work around the `docker-compose` failure, but is currently
moved back to Stretch using the above backport alternative.

In all cases attempts were made to stay as close as possible to the original
`Dockerfile`s for each version and their base. When things are made to
differ it's because there seems to be no realistic a

--- a/.circleci/images/primary/Dockerfile-2.3.8
+++ b/.circleci/images/primary/Dockerfile-2.3.8
@@ -1,5 +1,5 @@
-# Current version: https://github.com/docker-library/ruby/blob/31f66490fdb837ddcc5896e3275f2188f2b7b6dd/2.3/stretch/Dockerfile
-FROM ruby:2.3.8
+# Last version: https://github.com/docker-library/ruby/blob/31f66490fdb837ddcc5896e3275f2188f2b7b6dd/2.3/stretch/Dockerfile
+FROM ruby:2.3.8-stretch
 
 # Make apt non-interactive
 RUN echo 'APT::Get::Assume-Yes "true";' > /etc/apt/apt.conf.d/90circleci \
@@ -15,7 +15,7 @@ RUN set -ex; \
             git mercurial xvfb \
             locales sudo openssh-client ca-certificates tar gzip parallel \
             net-tools netcat unzip zip bzip2 gnupg curl wget \
-            tzdata rsync vim less; \
+            tzdata rsync vim less jq; \
         rm -rf /var/lib/apt/lists/*;
 
 # Set timezone to UTC by default
@@ -26,16 +26,10 @@ RUN locale-gen en_US.UTF-8
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 
-# Install jq
-RUN JQ_URL="https://circle-downloads.s3.amazonaws.com/circleci-images/cache/linux-amd64/jq-latest" \
-  && curl --silent --show-error --location --fail --retry 3 --output /usr/bin/jq $JQ_URL \
-  && chmod +x /usr/bin/jq \
-  && jq --version
-
 # Install Docker
 RUN set -ex \
-  && export DOCKER_VERSION=$(curl --silent --fail --retry 3 https://download.docker.com/linux/static/stable/x86_64/ | grep -o -e 'docker-[.0-9]*-ce\.tgz' | sort -r | head -n 1) \
-  && DOCKER_URL="https://download.docker.com/linux/static/stable/x86_64/${DOCKER_VERSION}" \
+  && export DOCKER_VERSION=$(curl --silent --fail --retry 3 https://download.docker.com/linux/static/stable/$(arch)/ | grep -o -e 'docker-[.0-9]*-ce\.tgz' | sort -r | head -n 1) \
+  && DOCKER_URL="https://download.docker.com/linux/static/stable/$(arch)/${DOCKER_VERSION}" \
   && echo Docker URL: $DOCKER_URL \
   && curl --silent --show-error --location --fail --retry 3 --output /tmp/docker.tgz "${DOCKER_URL}" \
   && ls -lha /tmp/docker.tgz \
@@ -46,27 +40,14 @@ RUN set -ex \
   && (docker version || true)
 
 # Install Docker Compose
-RUN COMPOSE_URL="https://circle-downloads.s3.amazonaws.com/circleci-images/cache/linux-amd64/docker-compose-latest" \
-  && curl --silent --show-error --location --fail --retry 3 --output /usr/bin/docker-compose $COMPOSE_URL \
-  && chmod +x /usr/bin/docker-compose \
-  && docker-compose version
+RUN echo 'deb http://ftp.debian.org/debian stretch-backports main\ndeb-src http://ftp.debian.org/debian stretch-backports main' > /etc/apt/sources.list.d/stretch-backports.list \
+  && apt-get update \
+  && apt-get install -y docker-compose \
+  && docker-compose version \
+  && rm -rf /var/lib/apt/lists/*
 
 # Install Dockerize
-RUN DOCKERIZE_URL="https://circle-downloads.s3.amazonaws.com/circleci-images/cache/linux-amd64/dockerize-latest.tar.gz" \
-  && curl --silent --show-error --location --fail --retry 3 --output /tmp/dockerize-linux-amd64.tar.gz $DOCKERIZE_URL \
-  && tar -C /usr/local/bin -xzvf /tmp/dockerize-linux-amd64.tar.gz \
-  && rm -rf /tmp/dockerize-linux-amd64.tar.gz \
-  && dockerize --version
-
-# Install Protobuf compiler
-RUN export PROTOC_URL=$(curl -s https://api.github.com/repos/protocolbuffers/protobuf/releases/latest | grep browser_download_url | cut -d '"' -f 4 | grep -e 'protoc-[.0-9]*-linux-x86_64\.zip' | sort -r | head -n 1) \
-  && echo Protoc URL: $PROTOC_URL \
-  && curl --silent --show-error --location --fail --retry 3 --output /tmp/protoc.zip "${PROTOC_URL}" \
-  && ls -lha /tmp/protoc.zip \
-  && unzip /tmp/protoc.zip -d /tmp/protoc \
-  && mv /tmp/protoc/bin/* /usr/bin \
-  && rm -rf /tmp/protoc /tmp/protoc.zip \
-  && protoc --version
+RUN curl -sfL $(curl -s https://api.github.com/repos/powerman/dockerize/releases/latest | grep -i /dockerize-$(uname -s)-$(dpkg --print-architecture)\" | cut -d\" -f4) | install /dev/stdin /usr/local/bin/dockerize
 
 # Install RubyGems
 RUN gem update --system
