Fix JRuby images CMD

--- a/.circleci/images/primary/Dockerfile-jruby-9.2.8.0
+++ b/.circleci/images/primary/Dockerfile-jruby-9.2.8.0
@@ -99,4 +99,4 @@ RUN echo "export PATH=/opt/jruby/bin:$BUNDLE_BIN:\$PATH" >> ~/.profile
 RUN mkdir /app
 WORKDIR /app
 
-CMD ["bin", "bash", "--login"]
+CMD ["/bin/sh"]
