--- a/.circleci/images/primary/Dockerfile-jruby-9.2-latest
+++ b/.circleci/images/primary/Dockerfile-jruby-9.2-latest
@@ -116,4 +116,4 @@ RUN echo "export PATH=/opt/jruby/bin:$BUNDLE_BIN:\$PATH" >> ~/.profile
 RUN mkdir /app
 WORKDIR /app
 
-CMD ["bin", "bash", "--login"]
+CMD ["/bin/sh"]
