--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -419,7 +419,7 @@ jobs:
     docker:
       - environment:
           *container_base_environment
-        image: ivoanjo/docker-library:ddtrace_rb_2_5_9
+        image: ghcr.io/datadog/dd-trace-rb/ruby:2.5.9-dd
     resource_class: small
     steps:
       - checkout
@@ -441,7 +441,7 @@ jobs:
     docker:
       - environment:
           *container_base_environment
-        image: ivoanjo/docker-library:ddtrace_rb_2_5_9
+        image: ghcr.io/datadog/dd-trace-rb/ruby:2.5.9-dd
     resource_class: small
     steps:
       - run:
@@ -480,37 +480,37 @@ job_configuration:
   - &config-2_1
     <<: *filters_all_branches_and_tags
     ruby_version: '2.1'
-    image: ivoanjo/docker-library:ddtrace_rb_2_1_10
+    image: ghcr.io/datadog/dd-trace-rb/ruby:2.1.10-dd
     resource_class_to_use: medium+
   - &config-2_2
     <<: *filters_all_branches_and_tags
     ruby_version: '2.2'
-    image: ivoanjo/docker-library:ddtrace_rb_2_2_10
+    image: ghcr.io/datadog/dd-trace-rb/ruby:2.2.10-dd
     resource_class_to_use: medium+
   - &config-2_3
     <<: *filters_all_branches_and_tags
     ruby_version: '2.3'
-    image: ivoanjo/docker-library:ddtrace_rb_2_3_8
+    image: ghcr.io/datadog/dd-trace-rb/ruby:2.3.8-dd
     resource_class_to_use: medium+
   - &config-2_4
     <<: *filters_all_branches_and_tags
     ruby_version: '2.4'
-    image: ivoanjo/docker-library:ddtrace_rb_2_4_10
+    image: ghcr.io/datadog/dd-trace-rb/ruby:2.4.10-dd
     resource_class_to_use: medium+
   - &config-2_5
     <<: *filters_all_branches_and_tags
     ruby_version: '2.5'
-    image: ivoanjo/docker-library:ddtrace_rb_2_5_9
+    image: ghcr.io/datadog/dd-trace-rb/ruby:2.5.9-dd
     resource_class_to_use: medium+
   - &config-2_6
     <<: *filters_all_branches_and_tags
     ruby_version: '2.6'
-    image: ivoanjo/docker-library:ddtrace_rb_2_6_7
+    image: ghcr.io/datadog/dd-trace-rb/ruby:2.6.7-dd
     resource_class_to_use: medium+
   - &config-2_7
     <<: *filters_all_branches_and_tags
     ruby_version: '2.7'
-    image: ivoanjo/docker-library:ddtrace_rb_2_7_3
+    image: ghcr.io/datadog/dd-trace-rb/ruby:2.7.3-dd
     resource_class_to_use: medium+
   - &config-2_7-small
     <<: *config-2_7
@@ -518,38 +518,38 @@ job_configuration:
   - &config-3_0
     <<: *filters_all_branches_and_tags
     ruby_version: '3.0'
-    image: ivoanjo/docker-library:ddtrace_rb_3_0_3
+    image: ghcr.io/datadog/dd-trace-rb/ruby:3.0.3-dd
     resource_class_to_use: medium+
   - &config-3_1
     <<: *filters_all_branches_and_tags
     ruby_version: '3.1'
-    image: ivoanjo/docker-library:ddtrace_rb_3_1_1
+    image: ghcr.io/datadog/dd-trace-rb/ruby:3.1.1-dd
     resource_class_to_use: medium+
   - &config-3_2
     <<: *filters_all_branches_and_tags
     ruby_version: '3.2'
-    image: ivoanjo/docker-library:ddtrace_rb_3_2_0_preview2
+    image: ghcr.io/datadog/dd-trace-rb/ruby:3.2.0-preview2-dd
     resource_class_to_use: medium+
     # ADD NEW RUBIES HERE
   - &config-jruby-9_2_8_0 # Test with older 9.2 release because 9.2.9.0 changed behavior, see https://github.com/DataDog/dd-trace-rb/pull/1409
     <<: *filters_all_branches_and_tags
     ruby_version: 'jruby-9.2.8.0'
-    image: ivoanjo/docker-library:ddtrace_rb_jruby_9_2_8_0
+    image: ghcr.io/datadog/dd-trace-rb/jruby:9.2.8.0-dd
     resource_class_to_use: medium+
   - &config-jruby-9_2-latest # More recent release of 9.2
     <<: *filters_all_branches_and_tags
     ruby_version: 'jruby-9.2-latest'
-    image: ivoanjo/docker-library:ddtrace_rb_jruby_9_2_18_0
+    image: ghcr.io/datadog/dd-trace-rb/jruby:9.2.18.0-dd
     resource_class_to_use: medium+
   - &config-jruby-9_3-latest
     <<: *filters_all_branches_and_tags
     ruby_version: 'jruby-9.3-latest'
-    image: ivoanjo/docker-library:ddtrace_rb_jruby_9_3_4_0
+    image: ghcr.io/datadog/dd-trace-rb/jruby:9.3.4.0-dd
     resource_class_to_use: medium+
-  - &config-truffleruby-21_0_0
+  - &config-truffleruby-22_0_0
     <<: *filters_all_branches_and_tags
-    ruby_version: 'truffleruby-21.0.0'
-    image: ivoanjo/docker-library:ddtrace_rb_truffleruby_21_0_0
+    ruby_version: 'truffleruby-22.0.0'
+    image: ghcr.io/datadog/dd-trace-rb/truffleruby:22.3.0-dd
     resource_class_to_use: medium+
 
 workflows:
@@ -585,7 +585,7 @@ workflows:
             - test-jruby-9.2.8.0
             - test-jruby-9.2-latest
             - test-jruby-9.3-latest
-            # soon™️ - test-truffleruby-21.0.0
+            # soon™️ - test-truffleruby-22.0.0
       - orb/changelog:
           <<: *config-2_7-small
           name: changelog
@@ -762,13 +762,13 @@ workflows:
       # TruffleRuby
       # soon™️
       # - orb/build:
-      #     <<: *config-truffleruby-21_0_0
-      #     name: build-truffleruby-21.0.0
+      #     <<: *config-truffleruby-22_0_0
+      #     name: build-truffleruby-22.0.0
       # - orb/test:
-      #     <<: *config-truffleruby-21_0_0
-      #     name: test-truffleruby-21.0.0
+      #     <<: *config-truffleruby-22_0_0
+      #     name: test-truffleruby-22.0.0
       #     requires:
-      #       - build-truffleruby-21.0.0
+      #       - build-truffleruby-22.0.0
       # Release jobs
       - "deploy prerelease Gem":
           <<: *filters_all_branches_and_tags
@@ -790,7 +790,7 @@ workflows:
             - test-jruby-9.2.8.0
             - test-jruby-9.2-latest
             - test-jruby-9.3-latest
-            # soon™️ - test-truffleruby-21.0.0
+            # soon™️ - test-truffleruby-22.0.0
       - "deploy release":
           <<: *filters_only_release_tags
           requires:
@@ -811,7 +811,7 @@ workflows:
             - test-jruby-9.2.8.0
             - test-jruby-9.2-latest
             - test-jruby-9.3-latest
-            # soon™️ - test-truffleruby-21.0.0
+            # soon™️ - test-truffleruby-22.0.0
   # This workflow runs the same `build` and `test` jobs as above on a schedule.
   # Tasks related to housekeeping (e.g. prerelease) are not relevant
   # to this daily check, as they are not expected to be impacted here.
@@ -1003,11 +1003,11 @@ workflows:
       # TruffleRuby
       # soon™️
       # - orb/build:
-      #     <<: *config-truffleruby-21_0_0
-      #     name: build-truffleruby-21.0.0
+      #     <<: *config-truffleruby-22_0_0
+      #     name: build-truffleruby-22.0.0
       #     edge: true
       # - orb/test:
-      #     <<: *config-truffleruby-21_0_0
-      #     name: test-truffleruby-21.0.0
+      #     <<: *config-truffleruby-22_0_0
+      #     name: test-truffleruby-22.0.0
       #     requires:
-      #       - build-truffleruby-21.0.0
+      #       - build-truffleruby-22.0.0
